# ML-TImeSeries

./: .gitignore  README.md  assignment1_analysis.ipynb  convert.py  detector_playground.ipynb  log.csv  main.py  playground.ipynb  pyproject.toml  requirements.txt  ssh_detector.ipynb  ssh_detector_more_accuracy 2.ipynb  ssh_detector_more_accuracy 3.ipynb  ssh_detector_more_accuracy.ipynb
log-outputs/: log1_processed.csv  log2_processed.csv  log3_processed.csv  log4_processed.csv
models/: detector_config.pkl  lgb_ssh_detector.pkl  scaler.pkl
test-logs/: log1.csv  log2.csv  log3.csv  log4.csv
